--- a/.gitignore
+++ b/.gitignore
@@ -2,11 +2,11 @@
 **/.terraform/*
 
 # .tfstate files
-*.tfstate
-*.tfstate.*
+**/*.tfstate
+**/*.tfstate.*
 
 # .tfvars files
-*.tfvars
+**/*.tfvars
 **/venv
 **/__pycache__
 **/*.pyc
