--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,21 @@
+atomicwrites==1.3.0
+attrs==19.1.0
 Click==7.0
+coverage==4.5.3
 Flask==1.0.2
 Flask-MySQLdb==0.2.0
+gunicorn==19.9.0
 itsdangerous==1.1.0
 Jinja2==2.10
 MarkupSafe==1.1.1
 marshmallow==2.19.0
 marshmallow-sqlalchemy==0.16.1
+more-itertools==6.0.0
 mysqlclient==1.4.2.post1
+pluggy==0.9.0
 psycopg2==2.7.7
+py==1.8.0
+pytest==4.3.1
+six==1.12.0
 SQLAlchemy==1.3.1
 Werkzeug==0.14.1
-gunicorn==19.9.0
