--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@ Flask==1.0.2
 Flask-MySQLdb==0.2.0
 gunicorn==19.9.0
 itsdangerous==1.1.0
-Jinja2==2.10
+Jinja2>=2.10.1
 MarkupSafe==1.1.1
 marshmallow==2.19.0
 marshmallow-sqlalchemy==0.16.1
